# XunYu

./: .gitattributes  .gitignore  .svconfig.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.ps1  build.rs  extract_tests.ps1  image-test summary.md  insta.yaml  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml  security-audit.yml
achieve-ps1/: xun-bookmarks.ps1  xun-proxy.ps1  xun.ps1  xun.sh
benches/: acl_bench_divan.rs  alias_bench_divan.rs  backup_export_bench_divan.rs  backup_hotpath_bench_divan.rs  backup_perf_bench_divan.rs  bak_bench_divan.rs  bookmark_bench_divan.rs  brn_bench_divan.rs  path_guard_bench_divan.rs  xunbak_bench_divan.rs
cpp/xunbak-7z-plugin/: CMakeLists.txt  README.md  xunbak_exports.cpp  xunbak_ffi.h  xunbak_ffi_generated.h  xunbak_handler.cpp  xunbak_handler.h  xunbak_utils.cpp  xunbak_utils.h
crates/alias-shim/: Cargo.toml
crates/alias-shim/src/: main.rs
crates/xunbak-7z-core/: Cargo.toml  cbindgen.toml
dashboard-ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
dashboard-ui/src/: App.test.ts  App.vue  README.AI.md  api.ts  main.ts  types.ts  workspace-tools.test.ts  workspace-tools.ts
docs/: 1.md  README.md  architecture-and-tdd-plan.md  envmgr-faq.md  envmgr-integration-plan.md  envmgr-integration-tasks.md  envmgr-known-limitations.md  envmgr-manual-checklist.md  envmgr-release-notes.md  envmgr-smoke-report.md  envmgr-usage.md  path-guard-architecture.md  path-guard-fsm.md  path-guard-plan.md  path-guard-tasks.md  path-guard.md  perf-timing-compare.md  perf-timing.md  refactor-split-plan.md  tdd-operation-runtime-checklist.md  tdd_checklist-refer.md  windows-path-taxonomy.md
docs/implementation/: Backup-Method-Compatibility-Matrix.md  Backup-Optimization-Reference.md  Backup-Optimization-Roadmap.md  Backup-Optimization-Tasks.md  Backup-Overview-Mermaid.md  Backup-Performance-Baselines.md  Bak-Restore-Min-Risk-Refactor-Plan.md  Bookmarks-Competitor-Review.md  Bookmarks-Feature-Roadmap.md  Completion-Benchmark.md  Completion-Checklist.md  Completion-Design.md  Context-Switch-Design.md  Context-Switch-Tasks.md  Desktop-Integration-Plan.md  Dev-Test.md  File-Unlock-Protection-Encryption-Plan.md  Find-Design.md  Find-Tasks.md  Phase-Tasks.md  Phase10-Vendor-Notes.md  Phase12-Semi-Acceptance-Report.md  README.md  Redirect-Design.md  Review.txt  Single-File-Xunbak-Design.md  SysMonitor-MemCleaner-Design.md  Task2.md  Test-Env.md  Tests-List.md  Tests-Refactor.md  Traditional-Backup-Hash-Incremental-Benchmarks.md  Traditional-Backup-Hash-Incremental-Design.md  Traditional-Backup-Hash-Incremental-Tasks.md  Video-Compress-Remux-Spec.md  Xunbak-7z-Plugin-Release-Guide.md  Xunbak-7z-Plugin-Release-Matrix.md  Xunbak-7zip-Compat.md  Xunbak-7zip-Plugin-PoC.md  Xunbak-Codec-Expansion-Plan.md  (+7 more)
docs/module/: 00-writing-guide.md  01-ACL.md  02-alias.md  03-batch-rename-roadmap.md  03-batch_rename.md  04-backup.md  (+1 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: path_guard_check_string.rs
intro/: Features.md  Install.md  README.md  Shell.md  Usage.md
logs/: divan_baseline_2026-03-17.md  divan_optimized_2026-03-17.md  xunbak_baseline.md
scripts/: accept_xunbak_7z_plugin.ps1  backup_export_baseline.ps1  backup_file_id_baseline.ps1  backup_perf_baseline.ps1  bench_xunbak_7z_plugin_open.ps1  build_xunbak_7z_plugin.ps1  compat_7zip_24.ps1  generate_xunbak_ffi_header.ps1  install_xunbak_7z_plugin.ps1  real_fixture_e2e.ps1  smoke_xunbak_7z_plugin.ps1  test_xunbak_7z_plugin_portable.ps1  test_xunbak_7z_plugin_system.ps1  uninstall_xunbak_7z_plugin.ps1  xunbak_7z_plugin_common.ps1
src/: age_wrapper.rs  backup_formats.rs  bench_support.rs  cli.rs  config_monolith_backup_20260307-093319.rs  ctx_store.rs  fuzzy.rs  lib.rs  macros.rs  main.rs  model.rs  output.rs  ports_monolith_backup_20260307-091234.rs  proc.rs  protect.rs  runtime.rs  store.rs  suggest.rs  util.rs
tests/: bookmark_binary_cache_phase_a.rs  bookmark_lightweight_phase_a.rs  bookmark_phase_a.rs  bookmark_phase_e.rs  bookmark_phase_f.rs  bookmark_phase_g.rs  bookmark_phase_h.rs  bookmark_phase_i.rs  bookmark_phase_j.rs  cli_snapshots.rs  core_integration.rs  path_guard_bench.rs  path_guard_integration.rs  path_guard_trace.rs  path_guard_unit.rs  test_acl.rs  test_alias.rs  test_basic.rs  test_brn.rs  test_crypt_e2e.rs  test_ctx.rs  test_dashboard_api.rs  test_delete.rs  test_diff.rs  test_dry_run_format.rs  test_filevault_formats.rs  test_filevault_performance.rs  test_filevault_v13.rs  test_find.rs  test_lock_e2e.rs  test_naming_commands.rs  test_performance.rs  test_protect_e2e.rs  test_proxy_net.rs  test_redirect_e2e.rs  test_redirect_tools.rs  test_redirect_undo.rs  test_redirect_watch.rs  test_redirect_watch_core.rs  test_xunbak.rs
tests/fixtures/xunbak_sample/: Cargo.toml  FIXTURE_README.md  README.md
tests/fixtures/xunbak_sample/assets/archives/: backup.7z
tests/fixtures/xunbak_sample/config/: app.toml  hidden_file.txt  readonly_file.txt  settings.json
tests/fixtures/xunbak_sample/deep/level1/level2/level3/level4/: leaf.txt
tests/fixtures/xunbak_sample/docs/: duplicate_b.txt  设计说明.md
tests/fixtures/xunbak_sample/docs/api/: endpoints.md
tests/fixtures/xunbak_sample/path with spaces/: readme with spaces.txt
tests/fixtures/xunbak_sample/path with spaces/nested folder/: notes file.txt
tests/fixtures/xunbak_sample/src/: main.rs
tests/fixtures/xunbak_sample/src/core/: engine.rs
tests/fixtures/xunbak_sample/src/utils/: helpers.rs
tests/fixtures/xunbak_sample/中文目录/: 说明.txt
tests/fixtures/xunbak_sample/中文目录/子目录/: 配置.json
tools/: alias-perf-report.ps1  alias-phase5-acceptance.ps1  bench-complete.ps1  envmgr-concurrency-smoke.ps1  envmgr-dashboard-chain-smoke.ps1  envmgr-smoke.ps1  find-locker.ps1  gen_commands_md.py  gen_readme_commands.py  package-img-delivery.ps1  run-test-env.ps1  svg-algo-bench.ps1  svg-algo-sample-manifest.json  svg-quality-bench.py  test-env.ps1  test-safe.ps1  test-suite.ps1  vtracer-vs-official-bench.ps1  xun-vc-grid-search.ps1
(+1336 files in other folders)
