[workspace]
members = [".", "crates/alias-shim"]
default-members = ["."]

[package]
autobins = false
name        = "xun"
version     = "0.1.0"
edition     = "2024"
description = "A Windows-first Rust CLI and local dashboard for paths, proxies, envs, and file workflows."
license     = "AGPL-3.0-or-later"
repository  = "https://github.com/jinghu-moon/XunYu"
readme      = "README.md"
default-run = "xun"

[[bin]]
name = "xun"
path = "src/main.rs"

[[bin]]
name = "xyu"
path = "src/bin/xyu.rs"

[[bin]]
name = "acl_test"
path = "src/bin/acl_test.rs"

[features]
default = ["fs"]
fs = []
lock = []
protect = []
crypt = [
    "dep:age",
    "dep:aes-gcm",
    "dep:chacha20poly1305",
    "dep:aes-siv",
    "dep:argon2",
    "dep:pbkdf2",
    "dep:hmac",
    "dep:getrandom",
    "dep:base64",
    "dep:crc32fast",
    "dep:zeroize",
]
alias = ["dep:walkdir"]
alias-shell-extra = ["alias"]
dashboard = ["crypt", "dep:axum", "dep:tokio", "dep:rust-embed", "dep:mime_guess", "dep:win-icon-extractor"]
redirect = []
tui = ["dep:ratatui", "dep:crossterm"]
delete_tui = ["tui"]
batch_rename = ["tui", "dep:heck", "dep:walkdir"]
cstat = ["tui", "dep:ignore", "dep:blake3", "dep:memchr"]
img = [
    "dep:imagequant",
    "dep:lodepng",
    "dep:oxipng",
    "dep:webp",
    "dep:ravif",
    "dep:visioncortex",
    "dep:image",
    "dep:walkdir",
]
img-moz = ["img", "dep:mozjpeg"]
img-turbo = ["img"]
diff = [
    "dep:imara-diff",
    "dep:json5",
    "dep:notify",
    "dep:serde_yaml",
    "dep:tree-sitter",
    "dep:streaming-iterator",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-css",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-html",
]
desktop = []

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8" }
anyhow = "1"
thiserror = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dunce = "1"
argh       = "0.1"
dialoguer  = { version = "0.11", default-features = false, features = ["fuzzy-select", "password"] }
console    = "0.15"
comfy-table = { version = "7.1", default-features = false, features = ["tty"] }
winreg     = "0.52"
indicatif  = { version = "0.17", default-features = false }
zip        = { version = "2", default-features = false, features = ["deflate", "time"] }
bytemuck   = { version = "1", features = ["derive"] }
image      = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "webp", "avif"] }
imagequant = { version = "4", optional = true }
lodepng    = { version = "3", optional = true }
oxipng     = { version = "9", optional = true }
webp       = { version = "0.3", optional = true }
ravif      = { version = "0.11", optional = true, features = ["asm"] }
visioncortex = { version = "0.8", optional = true }
mozjpeg    = { version = "0.10", optional = true }
age        = { version = "0.11", optional = true }
aes-gcm = { version = "0.10", optional = true, features = ["std"] }
chacha20poly1305 = { version = "0.10", optional = true, features = ["std"] }
aes-siv = { version = "0.7", optional = true, features = ["std"] }
argon2 = { version = "0.5", optional = true, features = ["std"] }
pbkdf2 = { version = "0.12", optional = true, features = ["simple"] }
hmac = { version = "0.12", optional = true }
getrandom = { version = "0.3", optional = true, features = ["std"] }
base64 = { version = "0.22", optional = true }
crc32fast = { version = "1.4", optional = true }
zeroize = { version = "1", optional = true, features = ["zeroize_derive"] }
axum       = { version = "0.8", optional = true, default-features = false, features = ["json", "tokio", "http1", "query", "ws"] }
tokio      = { version = "1", optional = true, features = ["rt", "net", "macros", "sync"] }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
serde_yaml = { version = "0.9", optional = true }
json5 = { version = "0.4", optional = true }
notify = { version = "6", optional = true }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Ioctl",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_ProcessStatus",
  "Win32_System_Time",
  "Win32_System_Power",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_RemoteDesktop",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_RestartManager",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Wdk_Storage_FileSystem",
] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Cryptography",
  "Win32_Security_Authorization",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_Storage_FileSystem",
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_Debug",
  "Win32_UI_Shell",
] }
lazy_static = "1.5.0"
regex = "1.11"
sha2 = "0.10"
rayon = "1"
crossbeam-channel = "0.5"
win-icon-extractor = { version = "0.1.0", optional = true, default-features = false, features = ["webp", "cache"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# —— batch_rename 模块依赖（feature = "batch_rename"）——
heck    = { version = "0.5", optional = true }
walkdir = { version = "2",   optional = true }

# —— cstat 模块依赖（feature = "cstat"）——
ignore  = { version = "0.4", optional = true }
blake3  = { version = "1",   optional = true }
memchr  = { version = "2",   optional = true }

# —— Diff 模块依赖（feature = "diff"）——
imara-diff             = { version = "0.2",  optional = true }
tree-sitter            = { version = "0.24", optional = true }
streaming-iterator     = { version = "0.1",  optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-css        = { version = "0.23", optional = true }
tree-sitter-rust       = { version = "0.23", optional = true }
tree-sitter-html       = { version = "0.23", optional = true }

[profile.release]
opt-level     = "z"
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"

[profile.release-img]
inherits      = "release"
opt-level     = 3
lto           = "thin"

[profile.release-shim]
inherits = "release"
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serial_test = "3.0"
tower = "0.5"
