[package]
name = "alias-shim"
version = "0.1.0"
edition = "2024"
description = "xun alias shim runtime (no_std, Windows only)"

[dependencies]
windows-sys = { version = "0.59", default-features = false, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Environment",
  "Win32_System_IO",
  "Win32_System_JobObjects",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Shell",
] }
